Exception handling added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(AdvancedProgrammingTask2)
 set(CMAKE_CXX_STANDARD 14)
 
 add_library(exception Exception.cpp)
-add_executable(client Client.cpp)
-add_executable(server Server.cpp)
+add_executable(client Server.cpp)
+add_executable(server Client.cpp)
 target_link_libraries(server exception)
-target_link_libraries(client exception)
+target_link_libraries (client exception)
