--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -1,15 +1,13 @@
 cmake_minimum_required(VERSION 3.20)
-project(AdvancedProgrammingTask2)
+project(Simple-Server-and-Chat-Program)
 
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Server
         Client.cpp
         Client.h
-        Comms.cpp
         Comms.h
-        Exception.h
         main.cpp
         Server.cpp
         Server.h
-        Toggle.h)
+        Toggle.h Comms.cpp)
